tests/models/snapshots/animals/can_find_all@animals.snap
---
source: tests/models/animals.rs
assertion_line: 35
expression: result
---
Ok(
    [
        Animal {
            id: 101,
            pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC001",
            name: "Daisy",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2023-05-15,
            ),
            gender: "female",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-20,
            ),
            purchase_price: Some(
                45000.00,
            ),
            weight_at_birth: Some(
                28.50,
            ),
            current_weight: Some(
                375.25,
            ),
            notes: Some(
                "Excellent milk producer, calm temperament",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-06-21T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        Animal {
            id: 102,
            pid: 62197c29-a2dd-4591-a4d0-92f6d7099760,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC002",
            name: "Buttercup",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2023-06-10,
            ),
            gender: "female",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-07-15,
            ),
            purchase_price: Some(
                42500.00,
            ),
            weight_at_birth: Some(
                27.75,
            ),
            current_weight: Some(
                368.50,
            ),
            notes: Some(
                "Good health history, daughter of prize-winning cow",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-07-16T09:20:00+00:00,
            updated_at: 2024-12-14T16:45:00+00:00,
        },
        Animal {
            id: 103,
            pid: d909e761-36da-4062-ae78-abba4f7c1103,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC003",
            name: "Ferdinand",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2022-08-20,
            ),
            gender: "male",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2022-10-05,
            ),
            purchase_price: Some(
                65000.00,
            ),
            weight_at_birth: Some(
                32.25,
            ),
            current_weight: Some(
                625.75,
            ),
            notes: Some(
                "Breeding bull, excellent lineage",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-10-06T08:45:00+00:00,
            updated_at: 2024-12-10T11:30:00+00:00,
        },
        Animal {
            id: 113,
            pid: 5a6efa8e-8cf3-46fb-9fe6-41900aca729b,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC005",
            name: "Spot",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2022-11-12,
            ),
            gender: "female",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-01-15,
            ),
            purchase_price: Some(
                48500.00,
            ),
            weight_at_birth: Some(
                29.75,
            ),
            current_weight: Some(
                410.50,
            ),
            notes: Some(
                "Distinctive white patch on forehead, high milk production",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2023-01-16T10:45:00+00:00,
            updated_at: 2024-12-17T15:20:00+00:00,
        },
        Animal {
            id: 114,
            pid: d9dfbd4b-cccc-43cd-bca9-2eeafab929ae,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC006",
            name: "Bruno",
            specie_id: 1,
            breed_id: 1,
            date_of_birth: Some(
                2022-09-05,
            ),
            gender: "male",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2022-11-10,
            ),
            purchase_price: Some(
                75000.00,
            ),
            weight_at_birth: Some(
                35.50,
            ),
            current_weight: Some(
                875.25,
            ),
            notes: Some(
                "Secondary breeing bull, black coat",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2022-11-11T09:30:00+00:00,
            updated_at: 2024-12-16T14:45:00+00:00,
        },
        Animal {
            id: 116,
            pid: 348d1e0e-f76c-4253-bd44-5140ef25530a,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC008",
            name: "Oreo",
            specie_id: 1,
            breed_id: 4,
            date_of_birth: Some(
                2023-08-15,
            ),
            gender: "female",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-10-05,
            ),
            purchase_price: Some(
                55000.00,
            ),
            weight_at_birth: Some(
                32.50,
            ),
            current_weight: Some(
                575.00,
            ),
            notes: Some(
                "Black and white pattern, high milk yield potential",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2023-10-06T10:15:00+00:00,
            updated_at: 2024-12-14T13:40:00+00:00,
        },
        Animal {
            id: 117,
            pid: e497b08f-0624-4bf9-bbca-98b010ff2a3d,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC009",
            name: "Midnight",
            specie_id: 1,
            breed_id: 1,
            date_of_birth: Some(
                2023-07-20,
            ),
            gender: "female",
            parent_female_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-09-15,
            ),
            purchase_price: Some(
                50000.00,
            ),
            weight_at_birth: Some(
                33.25,
            ),
            current_weight: Some(
                525.50,
            ),
            notes: Some(
                "Solid black coat, excellent beef conformation",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2023-09-16T09:20:00+00:00,
            updated_at: 2024-12-12T16:35:00+00:00,
        },
        Animal {
            id: 118,
            pid: fb656171-1acc-476f-9e8d-d1abbc47bc50,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC010",
            name: "Duke",
            specie_id: 1,
            breed_id: 2,
            date_of_birth: Some(
                2022-06-15,
            ),
            gender: "male",
            parent_female_id: None,
            parent_male_id: None,
            status: "sold",
            purchase_date: Some(
                2022-08-10,
            ),
            purchase_price: Some(
                70000.00,
            ),
            weight_at_birth: Some(
                36.75,
            ),
            current_weight: Some(
                950.25,
            ),
            notes: Some(
                "Sold to breeding program at neighboring farm",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2022-08-11T08:30:00+00:00,
            updated_at: 2024-05-20T15:10:00+00:00,
        },
        Animal {
            id: 104,
            pid: bf3a3228-2188-4af4-ad55-0184cd5c3449,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC004",
            name: "Bella",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2024-02-18,
            ),
            gender: "female",
            parent_female_id: Some(
                b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            ),
            parent_male_id: Some(
                d909e761-36da-4062-ae78-abba4f7c1103,
            ),
            status: "active",
            purchase_date: None,
            purchase_price: None,
            weight_at_birth: Some(
                26.50,
            ),
            current_weight: Some(
                180.25,
            ),
            notes: Some(
                "First calf born on the farm",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-02-18T07:00:00+00:00,
            updated_at: 2024-12-05T13:15:00+00:00,
        },
        Animal {
            id: 115,
            pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC007",
            name: "Rose",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2024-04-10,
            ),
            gender: "female",
            parent_female_id: Some(
                5a6efa8e-8cf3-46fb-9fe6-41900aca729b,
            ),
            parent_male_id: Some(
                d909e761-36da-4062-ae78-abba4f7c1103,
            ),
            status: "active",
            purchase_date: None,
            purchase_price: None,
            weight_at_birth: Some(
                27.25,
            ),
            current_weight: Some(
                150.75,
            ),
            notes: Some(
                "Healthy calf, growing well",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-12-10T11:30:00+00:00,
        },
        Animal {
            id: 127,
            pid: 037c7aeb-b8e5-4900-bdd8-cf24a848a3a5,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            tag_id: "AC011",
            name: "Clover",
            specie_id: 1,
            breed_id: 100,
            date_of_birth: Some(
                2024-04-10,
            ),
            gender: "female",
            parent_female_id: Some(
                62197c29-a2dd-4591-a4d0-92f6d7099760,
            ),
            parent_male_id: Some(
                d909e761-36da-4062-ae78-abba4f7c1103,
            ),
            status: "active",
            purchase_date: None,
            purchase_price: None,
            weight_at_birth: Some(
                26.75,
            ),
            current_weight: Some(
                145.50,
            ),
            notes: Some(
                "Twin of Rose, slightly smaller but healthy",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_at: 2024-04-10T07:25:00+00:00,
            updated_at: 2024-12-08T16:45:00+00:00,
        },
    ],
)
